exports[`Login Form can render correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={undefined}>
    <View
        style={undefined}>
        <Input
            icon={undefined}
            iconStyle={undefined}
            label="Email"
            onChangeText={[Function]}
            placeholderTextColor={undefined}
            style={undefined}
            wrapperStyle={undefined} />
        <Input
            icon={undefined}
            iconStyle={undefined}
            label="Password"
            onChangeText={[Function]}
            placeholderTextColor={undefined}
            secureTextEntry={true}
            style={undefined}
            wrapperStyle={undefined} />
    </View>
    <Button
        onPress={[Function]}
        style={
            Array [
                undefined,
                undefined,
              ]
        }
        text="Login"
        textStyle={
            Array [
                undefined,
                undefined,
              ]
        } />
</View>,
  "nodes": Array [
    <View
      style={undefined}>
      <View
            style={undefined}>
            <Input
                  icon={undefined}
                  iconStyle={undefined}
                  label="Email"
                  onChangeText={[Function]}
                  placeholderTextColor={undefined}
                  style={undefined}
                  wrapperStyle={undefined} />
            <Input
                  icon={undefined}
                  iconStyle={undefined}
                  label="Password"
                  onChangeText={[Function]}
                  placeholderTextColor={undefined}
                  secureTextEntry={true}
                  style={undefined}
                  wrapperStyle={undefined} />
      </View>
      <Button
            onPress={[Function]}
            style={
                  Array [
                        undefined,
                        undefined,
                      ]
            }
            text="Login"
            textStyle={
                  Array [
                        undefined,
                        undefined,
                      ]
            } />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Login
        labels={
                Object {
                        "back": "Back",
                        "forgotPassword": "Forgot password",
                        "forgotPasswordFormButton": "Send",
                        "loginFormButton": "Login",
                        "password": "Password",
                        "rememberMe": "Remember Me",
                        "userIdentification": "Email",
                      }
        } />,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Login {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleInputChange": [Function],
        "props": Object {
          "labels": Object {
            "back": "Back",
            "forgotPassword": "Forgot password",
            "forgotPasswordFormButton": "Send",
            "loginFormButton": "Login",
            "password": "Password",
            "rememberMe": "Remember Me",
            "userIdentification": "Email",
          },
        },
        "refs": Object {},
        "renderLogo": [Function],
        "renderResetPasswordLink": [Function],
        "state": Object {
          "password": "",
          "userIdentification": "",
        },
        "submit": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={undefined}>
          <View
                    style={undefined}>
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Email"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              style={undefined}
                              wrapperStyle={undefined} />
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Password"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              secureTextEntry={true}
                              style={undefined}
                              wrapperStyle={undefined} />
          </View>
          <Button
                    onPress={[Function]}
                    style={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    }
                    text="Login"
                    textStyle={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    } />
</View>,
        "_renderedOutput": <View
          style={undefined}>
          <View
                    style={undefined}>
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Email"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              style={undefined}
                              wrapperStyle={undefined} />
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Password"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              secureTextEntry={true}
                              style={undefined}
                              wrapperStyle={undefined} />
          </View>
          <Button
                    onPress={[Function]}
                    style={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    }
                    text="Login"
                    textStyle={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    } />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Login
    labels={
        Object {
            "back": "Back",
            "forgotPassword": "Forgot password",
            "forgotPasswordFormButton": "Send",
            "loginFormButton": "Login",
            "password": "Password",
            "rememberMe": "Remember Me",
            "userIdentification": "Email",
          }
    } />,
}
`;

exports[`Login Form only renders the logo if there is one and it should be rendered 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={undefined}>
    <Logo
        image="fakeImage"
        style={undefined} />
    <View
        style={undefined}>
        <Input
            icon={undefined}
            iconStyle={undefined}
            label="Email"
            onChangeText={[Function]}
            placeholderTextColor={undefined}
            style={undefined}
            wrapperStyle={undefined} />
        <Input
            icon={undefined}
            iconStyle={undefined}
            label="Password"
            onChangeText={[Function]}
            placeholderTextColor={undefined}
            secureTextEntry={true}
            style={undefined}
            wrapperStyle={undefined} />
    </View>
    <Button
        onPress={[Function]}
        style={
            Array [
                undefined,
                undefined,
              ]
        }
        text="Login"
        textStyle={
            Array [
                undefined,
                undefined,
              ]
        } />
</View>,
  "nodes": Array [
    <View
      style={undefined}>
      <Logo
            image="fakeImage"
            style={undefined} />
      <View
            style={undefined}>
            <Input
                  icon={undefined}
                  iconStyle={undefined}
                  label="Email"
                  onChangeText={[Function]}
                  placeholderTextColor={undefined}
                  style={undefined}
                  wrapperStyle={undefined} />
            <Input
                  icon={undefined}
                  iconStyle={undefined}
                  label="Password"
                  onChangeText={[Function]}
                  placeholderTextColor={undefined}
                  secureTextEntry={true}
                  style={undefined}
                  wrapperStyle={undefined} />
      </View>
      <Button
            onPress={[Function]}
            style={
                  Array [
                        undefined,
                        undefined,
                      ]
            }
            text="Login"
            textStyle={
                  Array [
                        undefined,
                        undefined,
                      ]
            } />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Login
        labels={
                Object {
                        "back": "Back",
                        "forgotPassword": "Forgot password",
                        "forgotPasswordFormButton": "Send",
                        "loginFormButton": "Login",
                        "password": "Password",
                        "rememberMe": "Remember Me",
                        "userIdentification": "Email",
                      }
        }
        logoImage="fakeImage"
        onLogin={[Function]}
        showLogo={true} />,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Login {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleInputChange": [Function],
        "props": Object {
          "labels": Object {
            "back": "Back",
            "forgotPassword": "Forgot password",
            "forgotPasswordFormButton": "Send",
            "loginFormButton": "Login",
            "password": "Password",
            "rememberMe": "Remember Me",
            "userIdentification": "Email",
          },
          "logoImage": "fakeImage",
          "onLogin": [Function],
          "showLogo": true,
        },
        "refs": Object {},
        "renderLogo": [Function],
        "renderResetPasswordLink": [Function],
        "state": Object {
          "password": "",
          "userIdentification": "",
        },
        "submit": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 5,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={undefined}>
          <Logo
                    image="fakeImage"
                    style={undefined} />
          <View
                    style={undefined}>
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Email"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              style={undefined}
                              wrapperStyle={undefined} />
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Password"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              secureTextEntry={true}
                              style={undefined}
                              wrapperStyle={undefined} />
          </View>
          <Button
                    onPress={[Function]}
                    style={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    }
                    text="Login"
                    textStyle={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    } />
</View>,
        "_renderedOutput": <View
          style={undefined}>
          <Logo
                    image="fakeImage"
                    style={undefined} />
          <View
                    style={undefined}>
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Email"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              style={undefined}
                              wrapperStyle={undefined} />
                    <Input
                              icon={undefined}
                              iconStyle={undefined}
                              label="Password"
                              onChangeText={[Function]}
                              placeholderTextColor={undefined}
                              secureTextEntry={true}
                              style={undefined}
                              wrapperStyle={undefined} />
          </View>
          <Button
                    onPress={[Function]}
                    style={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    }
                    text="Login"
                    textStyle={
                              Array [
                                        undefined,
                                        undefined,
                                      ]
                    } />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Login
    labels={
        Object {
            "back": "Back",
            "forgotPassword": "Forgot password",
            "forgotPasswordFormButton": "Send",
            "loginFormButton": "Login",
            "password": "Password",
            "rememberMe": "Remember Me",
            "userIdentification": "Email",
          }
    }
    logoImage="fakeImage"
    onLogin={[Function]}
    showLogo={true} />,
}
`;
